--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 :root {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 body {
-    color: rgb(5, 24, 66);
-    background-image: url(../../afbeeldingen/duif_achtergrond.png);
-    background-size: cover;
-    max-height: 100vh;
+  color: rgb(5, 24, 66);
+  background-image: url(../../afbeeldingen/duif_achtergrond.png);
+  background-size: cover;
+  max-height: 100vh;
+  margin: 0;
+}
+
+body div {
+  max-height: 100vh;
+}
+
+* {
+  box-sizing: border-box;
 }
