--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -2,11 +2,11 @@
   display: grid;
   width: 80%;
   max-width: 1000px;
-  height: 70vh;
+  height: 80vh;
   margin: auto;
   grid-template-columns: 20rem auto;
   overflow: hidden;
-  border-radius: 5px;
+  border-radius: 5px 5px 0 0;
 }
 
 /* Groups */
@@ -17,7 +17,7 @@
   max-height: 100%;
   overflow-y: auto;
   border-right: #773833 1px solid;
-  scrollbar-color: rgb(197 221 255 / 50%);
+  scrollbar-color: rgb(35, 84, 160) rgb(197 221 255 / 50%);
 }
 
 .groupBox {
@@ -25,16 +25,17 @@
   flex-direction: row;
   column-gap: 1rem;
   padding: 0.5rem;
-  border-radius: 5px;
+  border: 5px;
   margin-bottom: 0.5rem;
 }
 
 .groupBox:hover {
-  background-color: rgb(197 221 255 / 75%);
+  background-color: rgb(197 221 255 / 100%);
 }
 
 .selected {
   background-color: rgb(197 221 255 / 100%);
+  border: 1px solid #773833;
 }
 
 .groupBox img {
@@ -53,17 +54,18 @@
   background-color: rgb(197 221 255 / 50%);
   height: 100%;
   max-height: 100%;
+  max-width: 100%;
   overflow-y: auto;
   scrollbar-color: rgb(35, 84, 160) rgb(197 221 255 / 50%);
+  padding: 2rem;
 }
 
 .postBox {
-  width: 80%;
   background-color: white;
-  border: #773833 solid 1px;
+  border: 1px solid #773833;
   border-radius: 5px;
   padding: 1rem;
-  margin: 2rem;
+  margin-bottom: 2rem;
 }
 
 /* UserBox */
